// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor link internally 1`] = `
Array [
  " ",
  <a
    href="/about"
    onClick={[Function]}
    onMouseEnter={[Function]}
  />,
  " ",
]
`;

exports[`Anchor link to mailto 1`] = `
Array [
  " ",
  <a
    href="mailto:clarice@bouwer.dev"
    rel="nofollow noopener noreferrer"
    target="_blank"
  />,
  " ",
]
`;

exports[`Anchor should link to http/https 1`] = `
Array [
  " ",
  <a
    href="https://curiousprogrammer.dev"
    rel="nofollow noopener noreferrer"
    target="_blank"
  />,
  " ",
]
`;

exports[`Anchor should not have a link 1`] = `null`;
